Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-76587

wasm: keyboard mnemonics do not work correctly

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.7
    • 5.13.0
    • GUI: Menus
    • None
    • WebAssembly
    • 5af0177c9 (dev), a1867208a (dev), 7022d0e22 (dev)

      It was reported that keyboard mnemonics (menu shortcuts) do not work in wasm.

      I briefly tested this with the textedit example at https://www.qt.io/qt-examples-for-webassembly

      , and it either prints 'Dead' or another character.

       

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lpotter Lorn Potter
            lpotter Lorn Potter
            Veli-Pekka Heinonen Veli-Pekka Heinonen
            Votes:
            2 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes